--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,3 @@
 pytube
 subprocess
+# and FFMPEG, please download from the official webpage and put the ffmpeg.exe file in the same directory as the downloader scripts!
